--- a/theme.css
+++ b/theme.css
@@ -47,6 +47,7 @@
     margin-inline-end: 3rem;
 
     @top-left {
+        writing-mode: horizontal-tb;
         content: string(string-title);
         max-width: 50%;
         font-size: .8rem;
@@ -55,6 +56,7 @@
         text-overflow: ellipsis;
     }
     @top-right {
+        writing-mode: horizontal-tb;
         content: string(chapter-number, first) " " string(chapter, first);
         max-width: 50%;
         margin-inline-start: 1em;
@@ -67,10 +69,12 @@
         min-width: 0;
     }
     @bottom-left {
+        writing-mode: horizontal-tb;
         content: string(string-date);
         max-width: 15%;
     }
     @bottom-center {
+        writing-mode: horizontal-tb;
         margin-inline-start: 1em;
         content: string(string-conference);
         max-width: 70%;
@@ -79,6 +83,7 @@
         text-overflow: ellipsis;
     }
     @bottom-right {
+        writing-mode: horizontal-tb;
         content: counter(page) " / " counter(pages);
         max-width: 15%;
         overflow: hidden;
@@ -367,6 +372,7 @@ h4 + p {
     color: rgb(0,0,238);
     margin-inline-start: -2em;
     margin-inline-end: 1em;
+    text-combine-upright: all;
 }
 ::footnote-call {
     content: "*" counter(footnote);
@@ -374,6 +380,7 @@ h4 + p {
     color: rgb(0,0,238);
     position: relative;
     inset-block-start: -0.5rem;
+    text-combine-upright: all;
 }
 .fn + .fn::footnote-call {
     margin-inline-start: .25em;
@@ -390,12 +397,15 @@ h4 + p {
 }
 .footnote-ref::before {
     content: "[";
+    vertical-align: super;
 }
 .footnote-ref::after {
     content: "]";
+    vertical-align: super;
 }
 .footnote-ref > sup {
-    vertical-align: baseline;
+    vertical-align: super;
+    text-combine-upright: all;
 }
 
 .footnotes {
