英語と日本語とで強調emの表示を変える

--- a/theme.css
+++ b/theme.css
@@ -463,8 +463,12 @@ a.url {
 **** */
 
 em {
+}
+
+:lang(ja) em {
     font-style: normal;
-    font-weight: bold;
+    text-decoration-line: underline;
+    text-underline-offset: .2em;
 }
 
 /* ****
